--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   margin: auto;
 }
 
-textarea, input, select, button {
+textarea, input, select, button, textarea {
   width: 100%;
   margin: 0.5rem 0;
   padding: 0.5rem;
