--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 textarea, input, select, button {
   width: 100%;
-  margin: 0.5rem 0.5rem;
+  margin: 2.5rem 0;
   padding: 0.5rem;
   background-color: #1e1e1e;
   border: 1px solid #444;
