--- a/style.css
+++ b/style.css
@@ -13,10 +13,9 @@ body {
   margin: auto;
 }
 
-textarea {
+textarea, input, select, button {
   width: 100%;
   margin: 0.5rem 0;
-  margin-right: 0.5rem;
   padding: 0.5rem;
   background-color: #1e1e1e;
   border: 1px solid #444;
@@ -24,14 +23,8 @@ textarea {
   border-radius: 5px;
 }
 
-input, select, button {
-  width: 100%;
-  margin: 0.5rem 0;
-  padding: 0.5rem;
-  background-color: #1e1e1e;
-  border: 1px solid #444;
-  color: #fff;
-  border-radius: 5px;
+textarea {
+  margin-right: 0.5rem;
 }
 
 button {
